# paws-the-scroll

./: CONTRIBUTING.md  PRD.md  README.md  biome.json  index.html  overlay.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/openai-docs/scripts/: resolve-latest-model-info.js
docs/: demo-plan.md  research-basis.md  task-personalization-research.md  task-personalization.md
src/: App.css  App.tsx  OverlayApp.tsx  overlay-main.tsx  overlay.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cat_bases.rs  cat_state.rs  demo_trigger.rs  image_cache.rs  lib.rs  main.rs  model.rs  openai.rs  overlay.rs  store.rs  task_outcome.rs  tray.rs
src-tauri/src/activity/: accessibility.rs  classifier.rs  foreground.rs  idle.rs  mod.rs
src/components/: ErrorModal.tsx
src/lib/: api.ts  backgroundRemoval.ts  overlayApi.ts  types.ts  util.ts  viewStore.ts
src/views/: CatAdoption.tsx  Dashboard.tsx  Onboarding.tsx  Settings.tsx
