[package]
name = "paws-the-scroll"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paws_the_scroll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [
    "macos-private-api",
    "image-png",
    "tray-icon",
] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.10"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
parking_lot = "0.12.5"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "stream",
] }
base64 = "0.22.1"
futures-util = "0.3"
sha2 = "0.11.0"
rand = "0.10.1"

# Hidden demo trigger global shortcut; not available on iOS/Android.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

# macOS-specific deps for activity tracking (NSWorkspace, AX API, Core Graphics
# fallback, idle-since-last-input) and the NSPanel overlay window. Versions
# match the working stack in /Users/kkuan/tambourine-voice.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
missing_panics_doc = "allow"
